# training_model

./: README.md  convention.txt  main.py  pyproject.toml
dataset/: dataset_v2.csv  financial_data.csv  gold_data_20_y_cleaned.csv  modified_financial_data.csv
hypothesis/: inflation_price_corr.ipynb
models/: model1.pkl  model2.pkl  model3.pkl  model4.pkl  model5.pkl  model6.pkl
scalers/: scaler1.pkl  scaler2.pkl  scaler3.pkl  scaler4.pkl  scaler5.pkl  scaler6.pkl  scaler6_1.pkl
training/: Gold_Price_Prediction.ipynb  train1.ipynb  train10.ipynb  train11.ipynb  train12.ipynb  train12_rework.ipynb  train2.ipynb  train3.ipynb  train4.ipynb  train5.ipynb  train6.ipynb  train7.ipynb  train8.ipynb  train9.ipynb
