[project]
name = "training-model"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "joblib>=1.5.1",
    "matplotlib>=3.10.3",
    "pandas>=2.3.1",
    "scikit-learn>=1.7.0",
    "seaborn>=0.13.2",
    "xgboost>=3.0.2",
]
